--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "libs/39f217ce1071c9b8aa11ac42347c932b"]
 	path = libs/kicad-make
-	url = https@gist.github.com:39f217ce1071c9b8aa11ac42347c932b.git
+	url = https@gist.github.com:39f217ce1071c9b8aa11ac42347c932b
 [submodule "libs/kikit"]
 	path = libs/kikit
 	url = https@github.com:snhobbs/kikit
 [submodule "libs/pcbnewTransition"]
 	path = libs/pcbnewTransition
-	url = https@github.com:snhobbs/pcbnewTransition.git
+	url = https@github.com:snhobbs/pcbnewTransition
